--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -24,8 +24,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="release-info">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> release-info
+            <NavLink class="nav-link" href="sd-card-prep">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> NextUI Installation
             </NavLink>
         </div>
     </nav>
