SetupComplete page, misc fixes

--- a/Components/Pages/NextUiDownload.razor
+++ b/Components/Pages/NextUiDownload.razor
@@ -646,7 +646,7 @@
     private void SkipDownload()
     {
         //TODO remove
-        Navigation.NavigateTo($"/bios-config/{Uri.EscapeDataString(@"C:\Users\ahoog\Desktop\test_nextui_download")}");
+        Navigation.NavigateTo($"/bios-config/{Uri.EscapeDataString(selectedPath)}");
     }
 
     private void ShowDebugInfo()
