--- a/Components/Pages/SdCardPrep.razor
+++ b/Components/Pages/SdCardPrep.razor
@@ -27,7 +27,7 @@
                 </ol>
 
                 <div class="info-box">
-                    <p>ℹ️ <strong>Note:</strong> fat32 or exFat format can be used. fat32 is generally considered the most stable, but exFat supports files over 4GB.</p>
+                    <p>ℹ️ <strong>Note:</strong> FAT32 or exFAT format can be used. FAT32 is generally considered the most stable, but exFat supports having individual files over 4GB in size.</p>
                 </div>
 
                 <div class="platform-instructions">
